--- a/Text_Classification.ipynb
+++ b/Text_Classification.ipynb
@@ -6,7 +6,7 @@
       "name": "Text_Classification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNdCw/qfGMcihhErRnIqXfR",
+      "authorship_tag": "ABX9TyNJ7ucP8QuWvFWrMU+EWz4/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,17 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/DhilipSanjay/Detection-of-Sensitive-Data-Exposure-in-Images/blob/main/Text_Classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sM59X-o79RgC"
+      },
+      "source": [
+        "# Image Classification to detect sensitive data exposure\n",
+        "\n",
+        "## Importing libraries and downloading the dataset"
       ]
     },
     {
@@ -90,6 +101,15 @@
       ],
       "execution_count": 14,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7i3YvPoe9ZaT"
+      },
+      "source": [
+        "## Preprocessing the dataset"
+      ]
     },
     {
       "cell_type": "code",
@@ -236,6 +256,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9OLtjmJw9ehH"
+      },
+      "source": [
+        "## Model"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -305,6 +334,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mb2NlD159g8k"
+      },
+      "source": [
+        "## Training"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -346,6 +384,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "poN5h1SD9tiE"
+      },
+      "source": [
+        "## Plotting Accuracy and Loss Functions"
       ]
     },
     {
@@ -404,31 +451,12 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Kyfb-NtpNV7h",
-        "outputId": "c0fca8e5-c568-457b-ed1f-e84724870f08"
+        "id": "f94fRNNo-386"
       },
       "source": [
-        "# Sample examples\n",
-        "sentence = [\"My credit card no is 124345346\", \"game of thrones season finale showing this sunday night\"]\n",
-        "sequences = tokenizer.texts_to_sequences(sentence)\n",
-        "padded = pad_sequences(sequences, maxlen=max_length, padding=padding_type, truncating=truncation_type)\n",
-        "print(model.predict(padded))"
-      ],
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[9.611380e-01]\n",
-            " [4.130304e-04]]\n"
-          ],
-          "name": "stdout"
-        }
+        "## Saving the model"
       ]
     },
     {
@@ -485,6 +513,51 @@
             "\u001b[K     |████████████████████████████████| 112kB 12.0MB/s \n",
             "\u001b[?25h2021-03-22 06:06:23.155964: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n",
             "Model converted to JSON successfully\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "plgECuQc9wdt"
+      },
+      "source": [
+        "## Sample Example"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kyfb-NtpNV7h",
+        "outputId": "ff70574e-05cf-4fb0-9125-1a167a7dae67"
+      },
+      "source": [
+        "# Sample examples\n",
+        "sentence = [\"My credit card no is 124345346\", \"game of thrones season finale showing this sunday night\"]\n",
+        "sequences = tokenizer.texts_to_sequences(sentence)\n",
+        "padded = pad_sequences(sequences, maxlen=max_length, padding=padding_type, truncating=truncation_type)\n",
+        "predictions = model.predict(padded)\n",
+        "for i in range(len(predictions)):\n",
+        "  print(predictions[i][0])\n",
+        "  if predictions[i][0]>0.5:\n",
+        "    print(\"Sensitive - \"+ sentence[i])\n",
+        "  else:\n",
+        "    print(\"Non-Sensitive - \" + sentence[i] )"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.961138\n",
+            "Sensitive - My credit card no is 124345346\n",
+            "0.0004130304\n",
+            "Non-Sensitive - game of thrones season finale showing this sunday night\n"
           ],
           "name": "stdout"
         }
