--- a/Text_Classification.ipynb
+++ b/Text_Classification.ipynb
@@ -6,7 +6,8 @@
       "name": "Text_Classification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJ7ucP8QuWvFWrMU+EWz4/",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOqMxqAfOcRX6UdMqC5IQFR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +68,7 @@
         "sensitive_datafile = \"SensitiveDataset.json\"\n",
         "nonsensitive_datafile = \"NonSensitiveDataset.json\""
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,7 +100,7 @@
         "oov_tok = \"<OOV>\"\n",
         "training_size = 20000"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -167,7 +168,7 @@
         "print(\"Validation Dataset Size: \", len(validation_sentences))\n",
         "print(\"Sample Validation Data:\", validation_sentences[0])"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,7 +228,7 @@
         "validation_sequences = tokenizer.texts_to_sequences(validation_sentences)\n",
         "validation_padded = pad_sequences(validation_sequences, maxlen=max_length, padding=padding_type, truncating=truncation_type)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,7 +253,7 @@
         "validation_padded = np.array(validation_padded)\n",
         "validation_labels = np.array(validation_labels)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -301,11 +302,12 @@
         "\n",
         "# model.compile - Configures the model for training.\n",
         "model.compile(loss='binary_crossentropy',optimizer='adam',metrics=['accuracy'])\n",
+        "# Adam -  optimization algorithm used instead of the classical stochastic gradient descent procedure to update network weights.\n",
         "\n",
         "# Display the sumary of the model\n",
         "model.summary()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,7 +366,7 @@
         "                    verbose=1)\n",
         "                    #callbacks=[callbacks])"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,7 +422,7 @@
         "plot_graphs(history, \"accuracy\")\n",
         "plot_graphs(history, \"loss\")"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -480,7 +482,7 @@
         "!tensorflowjs_converter --input_format=keras /content/model/text_model.h5 /content/text_model\n",
         "print(\"Model converted to JSON successfully\")"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -549,7 +551,7 @@
         "  else:\n",
         "    print(\"Non-Sensitive - \" + sentence[i] )"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
