--- a/Image_Classification.ipynb
+++ b/Image_Classification.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPLVK2P5+vlYMLkEbxt0MtV",
+      "authorship_tag": "ABX9TyNV8apGPsynyv1JUrvVHhxc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -219,7 +219,9 @@
         "\n",
         "# Sequential - defines a SEQUENCE of layers in the neural network.\n",
         "model = tf.keras.models.Sequential([\n",
+        "  # 2D Convolution Layer - Filter, Kernel_size, activation fn\n",
         "  tf.keras.layers.Conv2D(16, (3,3), activation='relu', input_shape=(150,150,3)),\n",
+        "  # Max pooling operation for 2D data - Pool size\n",
         "  tf.keras.layers.MaxPooling2D(2,2),\n",
         "  tf.keras.layers.Conv2D(32, (3,3), activation='relu'),\n",
         "  tf.keras.layers.MaxPooling2D(2,2),\n",
@@ -227,8 +229,11 @@
         "  tf.keras.layers.MaxPooling2D(2,2),\n",
         "  tf.keras.layers.Conv2D(128, (3,3), activation='relu'),\n",
         "  tf.keras.layers.MaxPooling2D(2,2),\n",
+        "  # Flattens the input. Does not affect the batch size.\n",
         "  tf.keras.layers.Flatten(),\n",
+        "  # Regular densely-connected Neural Network layer with ReLU activation function.\n",
         "  tf.keras.layers.Dense(512, activation='relu'),\n",
+        "  # Regular densely-connected Neural Network layer with sigmoid activation function.\n",
         "  tf.keras.layers.Dense(1, activation='sigmoid')\n",
         "])\n",
         "\n",
@@ -238,6 +243,7 @@
         "model.compile(loss='binary_crossentropy',\n",
         "              optimizer=RMSprop(lr=0.001),\n",
         "              metrics=['accuracy'])\n",
+        "# RMSprop optimizer - allows to control the learning rate\n",
         "\n",
         "# Display the sumary of the model\n",
         "model.summary()"
