--- a/Text_Classification.ipynb
+++ b/Text_Classification.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOqMxqAfOcRX6UdMqC5IQFR",
+      "authorship_tag": "ABX9TyM8XrhPP4yv6laPL22NLT8q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "id": "sM59X-o79RgC"
       },
       "source": [
-        "# Image Classification to detect sensitive data exposure\n",
+        "# Text Classification to detect sensitive data exposure\n",
         "\n",
         "## Importing libraries and downloading the dataset"
       ]
