--- a/Image_Classification.ipynb
+++ b/Image_Classification.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNV8apGPsynyv1JUrvVHhxc",
+      "authorship_tag": "ABX9TyP3A2Ulkj9G3raYo+c8nehu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "id": "KaMPLHRq8pBq"
       },
       "source": [
-        "# Text Classification to detect sensitive data exposure\n",
+        "# Image Classification to detect sensitive data exposure\n",
         "\n",
         "## Importing libraries and downloading the dataset"
       ]
