--- a/Image_Classification.ipynb
+++ b/Image_Classification.ipynb
@@ -6,8 +6,7 @@
       "name": "Image Classification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOopT9gvgyvu2P+oItQ1YXR",
+      "authorship_tag": "ABX9TyON3B83Mys2Gu9laU3zxEtl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +59,7 @@
         "training_folder = git_folder + \"/dataset/training\"\n",
         "validation_folder = git_folder + \"/dataset/validation\""
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +97,7 @@
         "print('Total validation sensitive images:', len(os.listdir(validation_sensitive_dir)))\n",
         "print('Total validation nonsensitive images:', len(os.listdir(validation_nonsensitive_dir)))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,7 +168,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -243,12 +242,12 @@
         "model.compile(loss='binary_crossentropy',\n",
         "              optimizer='adam',\n",
         "              metrics=['accuracy'])\n",
-        "# RMSprop optimizer - allows to control the learning rate\n",
+        "# Adam -  optimization algorithm used instead of the classical stochastic gradient descent procedure to update network weights.\n",
         "\n",
-        "# Display the sumary of the model\n",
+        "# Display the summary of the model\n",
         "model.summary()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,7 +293,7 @@
         "id": "xtV9ld7b8HP4"
       },
       "source": [
-        "## Rescaling & Training"
+        "## Preprocessing, Data Augmentation & Training"
       ]
     },
     {
@@ -348,7 +347,7 @@
         "      validation_steps=8,\n",
         "      callbacks=[callbacks])"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -623,7 +622,7 @@
         "plot_graphs(history, \"accuracy\")\n",
         "plot_graphs(history, \"loss\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -683,7 +682,7 @@
         "!tensorflowjs_converter --input_format=keras /content/model/image_model.h5 /content/image_model\n",
         "print(\"Model converted to JSON successfully\")"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -790,7 +789,7 @@
         "  ans = fn + \": \" + result[fn]\n",
         "  plt.title(ans)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
